Unit CSS complete

--- a/src/css/lesson.css
+++ b/src/css/lesson.css
@@ -20,5 +20,8 @@
 }
 
 .lesson-text-wrapper {
-    color: black;
+    color: white;
+    font-size: 30px;
+    font-weight: bold;
+    font-family: sans-serif;
 }
