--- a/src/css/lesson.css
+++ b/src/css/lesson.css
@@ -7,6 +7,7 @@
     border: none;
     box-shadow: 0 7px rgb(0, 132, 0);
     margin-bottom: 32px;
+    cursor: pointer;
 }
 
 .lesson-graphic-wrapper:hover {
