--- a/src/css/xpbar.css
+++ b/src/css/xpbar.css
@@ -33,7 +33,7 @@ progress::-webkit-progress-value{
     float: left;
     height:11px;
     margin:0px-10px 0 0;
-    background: rgb(255, 203, 60);
+    background: rgb(255, 255, 0);
     border-radius: 15px;
     box-shadow: 0px 0px 6px #777 inset;
 }
@@ -47,4 +47,10 @@ progress:after{
 
 .xpbar-wrapper {
     align-items: center;
+}
+
+*{
+    font-weight: bold;
+    font-family: sans-serif;
+    color: rgb(70, 69, 69);
 }
