--- a/src/css/roadmap.css
+++ b/src/css/roadmap.css
@@ -54,9 +54,17 @@
     cursor: pointer;
 }
 
-
-.coins{
-    background-color: aquamarine;
+.profile-dropdown-button1 {
+    margin-top: 10px;
+    padding-right: 65px;
+    font-size: 26px;
+    border: none;
+    background-color: inherit;
+    font-weight: bold;
+    color: rgb(70, 69, 69);
+    width: 12vw;
+    height: 5vw;
+    cursor: pointer;
 }
 
 .profile-dropdown-link {
@@ -76,11 +84,12 @@
 }
 
 .website-name {
+
     border: none;
     background-color: inherit;
     height: 5vw;
     margin-bottom: 2vw;
-    margin-top: 8px;
+    margin-top: 13px;
     width: 20vw;
     font-weight: bold;
     font-size: 2.5vw;
@@ -98,11 +107,18 @@
 }
 
 .coin-button-1 {
+    font-size: 20px;
+    margin-top: 40px;
     background-color: inherit;
     font-weight: bold;
     color: rgb(70, 69, 69);
     border: none;
     margin-left: 1vh;
+}
+
+.coinImg{
+    margin-top: 33px;
+    margin-left: 15px;
 }
 
 
