--- a/src/css/unit.css
+++ b/src/css/unit.css
@@ -17,7 +17,10 @@
     color: white;
     font-weight: bold;
     box-shadow: 0 7px rgb(106, 108, 238);
+    text-align: center;
 }
+
+
 
 .unit-lessons {
     display: flex;
